--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <!--This tags are to show the thumbnail on LinkedIn -->
       <meta property='og:title' content="Tribute Page">
       <meta property='og:image' content="https://lh3.googleusercontent.com/fcrflf5jwId-rJBZ3LDWdTggnzeUBFYr6yUB4t44pXDb6XUoWY9kEPy88qoUS5FYum2i2Q6xqeVodX1CJxhXoACJrDYcZ8E9he0fnEAd-zjzjMF3TXvyTzWzR4ajV-vWLSFOxx7mPPFwYrql8IjOOE5ttXzxzZfWlUwMOpeD73jdh4DvR4pZ6G85mmkJDbYAWlsVZXcBRwgmFQgOY5xqipx-ULJlTxxK4vwKcflkskBCDHvH4NmmrGnsN4T2qksBhjJH852-xhClAzSSvg-ixwbUNL7CEd7ap-vS_cBtSJxMPvyoQ94H5weOFpFo5YTTV3omHbiwubz73j4p0PuEy0Xk8nIdcftioOR7tRHgHiuL5_s81pRBtYkENOe6xAVCbIulWDtWiFgxGfEuXTU3bnyfwM3dfECAyoYBSFqWdDHbS_lMS9LLSrMERujaA9qCrAGbjqhGZcv0BC0IJ6LYK__cooyAXESrJzhmcOUtgIhm80HlZRORqGRnfCw7tgUIwl16g-7B6tCuaIFhvXmNLJiPYutsfSkuATIARMQEQqpFFaVjvLwyiafyMVwpxTz22lpQe49-sKgmqjKcmd1gQ0Ju0r8i22lqqidvZUpvEzdeTTD4wxqfXnKJxAGiQtR923g19qxuk4JHexcWu1ThfyrAfFRsLExw1HKLMvF5VoQiuxPyGlZfUQWYE5lo-z_mGRbLavK-RN6qzTyRVtYfY7D0=w1200-h806-no?authuser=0">
-      <meta property='og:description' content="A HTML, CSS and JavaScript project made for the "Responsive Web Design Certification" offered by freecodecamp.org.">
+      <meta property='og:description' content="A HTML, CSS and JavaScript project made for the Responsive Web Design Certification offered by freecodecamp.org.">
       <meta property='og:url' content="https://s4muele.github.io/Tribute-Page/">
       <!-- -->
   <meta charset="UTF-8">
