--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" >
-<head>
-      <!--This tags are to show the thumbnail on LinkedIn -->
-      <meta property="og:image" content="https://graemeharrison.com/assets/img/logo.png" />
-      <!-- -->
+<head>    
   <meta charset="UTF-8">
-  <title>CodePen - Build a Tribute Page</title>
+  <title>Tribute Page</title>
   <link rel="stylesheet" href="./style.css">
-
+   <!--This tags are to show the thumbnail on LinkedIn -->
+      <meta property="og:title" content="Tribute Page" />
+      <meta property="og:type" content="website" />
+      <meta property="og:image" content="" />
+      <meta property="og:url" content="https://s4muele.github.io/Tribute-Page/" />
+      
+   <!-- -->
 </head>
 <body>
 
