--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--This tags are to show the thumbnail on LinkedIn -->
       <meta property="og:title" content="Tribute Page" />
       <meta property="og:type" content="website" />
-      <meta property="og:image" content="" />
+      <meta property="og:image" content="main_thumbnail.png" />
       <meta property="og:url" content="https://s4muele.github.io/Tribute-Page/" />
       
    <!-- -->
