--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta property="og:title" content="Tribute Page" />
       <meta property="og:description" content="A HTML, CSS and JavaScript project made for the Responsive Web Design Certification offered by freecodecamp.org." />
       <meta property="og:type" content="website" />
-      <meta property="og:image" content="thumbnail.png" />
+      <meta property="og:image" content="main_thumb.png" />
       <meta property="og:url" content="https://s4muele.github.io/Tribute-Page/" />
       
    <!-- -->
