--- a/index.html
+++ b/index.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" >
-<head>    
+<head>
   <meta charset="UTF-8">
-  <title>Tribute Page</title>
-  <link rel="stylesheet" href="./style.css">
-   <!--This tags are to show the thumbnail on LinkedIn -->
-      <meta property="og:title" content="Tribute Page" />
-      <meta property="og:description" content="A HTML, CSS and JavaScript project I made for the Responsive Web Design Certification offered by freecodecamp.org." />
-      <meta property="og:type" content="website" />
-      <meta property="og:image" content="main_thumb.png" />
-      <meta property="og:url" content="https://s4muele.github.io/Tribute-Page/" />
-      
-   <!-- -->
+  <title>CodePen - Build a Tribute Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
 
@@ -59,10 +52,14 @@
   <li><span class="bold-text">1949</span> - Dies while on vacation in Colorado.</li>
     </ul>
     
-    <p><a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Edwin_Hubble#Early_life_and_education">Read more</a></p>
+    <p><a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Edwin_Hubble#Early_life_and_education">Read more ></a></p>
   </div> <!--End of #tribute-info-->
+  <div class="author-info">
+      <p>Made by <a href="https://github.com/S4muele">S4muele</a></p>
+    <p>Special thanks to <a href="https://freecodecamp.org">freecodecamp.org</a></p>
+    </div>
 </div> <!--End of #main-->
-<!-- partial -->
+
   <script  src="./script.js"></script>
 
 </body>
