--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Build a Tribute Page</title>
+  <title>Hubble Tribute Page</title>
+  
+  <meta property="og:title" content="Hubble Tribute Page" />
+  <meta property="og:description" content="A responsive Tribute Page made for freecodecamp.org" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="images/link-thumb.png" />
+  <meta property="og:url" content="https://s4muele.github.io/Tribute-Page/" />
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./style.css">
 
