--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta property="og:title" content="Hubble Tribute Page" />
   <meta property="og:description" content="A responsive Tribute Page made for freecodecamp.org" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="images/link-thumb.png" />
+  <meta property="og:image" content="/link-thumb.png" />
   <meta property="og:url" content="https://s4muele.github.io/Tribute-Page/" />
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
