Updated images paths

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
   
   <div id="img-div" class="carousel">
     <div class="carousel-item carousel-item-visible">
-      <img id="image"  src="https://lh3.googleusercontent.com/xD6b-cgwgyqT1XTAbgJieSvn_dHpvL4YmR5piiQUu5sJUGNc9aXwvCvXuUaRDzYXXfs_dMP7Gb-xr49Oos1Fq5ytCdo9cXnLcEl9saLE1UuGb6jDWvcfFbnMS_rQu50x5O9eTTj-YPEMBKm0TCjqoFyRFBhzBMRc7LYqAOTosbQuv5X326o4lEhUPLkeDoLzvd7Ftix1g-uDPj6G-_ObmY9oQOKC2LuPqC97F5K0NFNnuzn40VwDXtiIvGx4DXA60ZdwA0rHepbIb5KySSyDzPJcEKcXZ8oz34AQNczB22wdImUH_8QMMydmpvt9jEULQEy_KbghVNljsMXxk3quuB6eXj-SkgasI11E0ZX9Vlf0F51ixOwv6ALS-nPbhtNbjNTGLGjHqe4NP8ZRy4rmToPlqe_OgHBszxt7dySWi-wbk2riwoieRxGR1S5dgk9Bzyxj6T3QcBr8El4-kE1cYtOIoYjP7TxBuEnI2Z0cE9syRoYIZ1ystAEKdnZ-3G6PF5aclNCkh2KPNeBPxMMsUvv-lIkzHNb5o-cnJc4Ei6yBjpv0Rbr_vZY_kCsHEuz-3NXYO_PhHS3SVvWlctg8UTTrGF282Vrkd5dGC0ktWEkH7Q3S-NjLycu3_8Rblyc-QHXjnoFvMm7POkQl8LGUjB4iVRLmNfp8GZleaXiF6VDVaRlwtlcrsmJT1fOzZ9aAz_jwG2i9T_k2SwJVaVYmP7K6=w640-h395-no?authuser=0" alt="Edwin Hubble with the 48 inches Schmidt Telescope, Palomar Observatory, 1949">
+      <img id="image"  src="images/carousel-img-1.jpeg" alt="Edwin Hubble with the 48 inches Schmidt Telescope, Palomar Observatory, 1949">
       <div id="img-caption">
         <p>Edwin Hubble with the 48" Schmidt Telescope, Palomar Observatory, 1949.</p>   
       </div>
     </div>
     <div class="carousel-item">
-      <img id="image"  src="https://lh3.googleusercontent.com/nqNQ71krCyTmnSEoNHlX1yJVmoZSD3_nvVSGqgq76ziPHBbbk00___Pc-oxUi1-HijyVht_IPqHVPhFOXrd6jyjSMvN--Hu_7h0W9-su_7LBSG0EMW6dhmyXVo3L04XdP-N6A7oa3BO2OhNAYFD1mNGThQHdOhYRdmhKjVS6yLx39gdhxXfRSUFnps081orEs2I358TWUbe4ZimtoQLwaI8-YR80vEaPy-5QPfgngTggd22tQI7fwKdD0YkOXlBUXi65YMpOvlTqMYmfWx2Dy2Ub9YqxqfmJbAwE_O6_aX_PvVVXAKpgjCv39VbRkOSViX17Ak8LgFfx0YvncEt3n-bSRnTaS2r0CSSXMfa4NapA7NBOTzvcE1kvgOCUHh60kBave8QVJecbuTkepDDbaVHcLpvrokhzuRCYDPA81si23A5_-_MmikTM2RSnNv_ykdJuoi2fVzbXLKNaSlItRKIwtaE_aCPVY3vMXa1BLXHnDv0W35yQaMySGUn_zIvgq9kyqPDYU7GG_5BfW58ADlJh1Bfh5l2DRYcOIuFxvjmTXsyrM19kSGZjNp9MSmR0KMjLOfyItaitS6RJNd2erSEmy2zrxfzP40WtiDH2pJiawYfkUYTmz1cRXkPKMXFqgl5FS8LwOyar-eMxrePf3EHNh_Sc29ELF2fmLy_JuhfCmzJaTRXL2ECH7qNIAp1-kJMtd-9YKqfiWRDgXtFT-6JL=w640-h395-no?authuser=0" alt="Edwin Hubble poses inside the 200-inch Palomar telescope a few years before his death in 1953">
+      <img id="image"  src="images/carousel-img-2.jpeg" alt="Edwin Hubble poses inside the 200-inch Palomar telescope a few years before his death in 1953">
       <div id="img-caption">
         <p>Edwin Hubble poses inside the 200-inch Palomar telescope a few years before his death in 1953.</p>   
       </div>
     </div>
     <div class="carousel-item">
-      <img id="image" src="https://lh3.googleusercontent.com/WHojAcxghdnSg68DDRwEmNHiqA5IPJFKcrJ1Xy00Z3iOHzTsi6GVzdl2j5GH44SEa_hxdNG6BsSBlHgOYitfob3wbwFURGGQq8mqE316_DqjRsiiXGdL0rEo7LF_qWcXDQAn-Si7cGHSOTNPiPjSltYOqGK1jFXDyV5IkqT6A3KymWtqm07NTKBmkjiw3aVwWcShPOrDj18rO1p9j-PPWbOivaasvVqYlAoZ-vAqxJZPteJYNTfaRtqJV5QM6XDtliO6m-EeJF0logqhQnIbp_TJt7KcLNfpqPTPha-0wSXexy68C6jJg1kI-y_tj8fLi8NYGenqB2AdphL2vmWUbJMZgRwEmSubjvO3hn29UrnJLjJPzpnYi3GavCqHP2mkirV4F5Tto17DWeLVoqjxZr3o_KLOJMyvgxVCNMyVi0OwwymcCPMsn9VwOcPAS4BsR_3-JkIWiWcwkKeuRCXDvxD11UNOd4hwmGH2l0cH1uGzRuvOO-itlXDx8TEaZcE9JJG9NN-tNmxIQo21avZ15ntZZchQwXCYBEgUFr4Koq92ax94uKZrxUJ1cNgxnE_4cYecNsSp5HTGpmSZHNy-hAZ2LFbEpZjCuxSnR8M7qMWo3xCpHPrDi5lGkyXXNWos0jZYxizqiNEVUz5e_4kttPvKm0Z3koSt9KiJxRIWKciF772feTGtWMK4yWwDwwOh2TURkrcInO_O3ET2ocD8Sf8_=w640-h395-no?authuser=0" alt="The modern Hale telescope at Palomar Observatory, California">
+      <img id="image" src="images/carousel-img-3.jpeg" alt="The modern Hale telescope at Palomar Observatory, California">
       <div id="img-caption">
         <p>The modern Hale telescope at Palomar Observatory, California.</p>   
       </div>
