--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Build a Tribute Page</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="./style.css">
+  <title>Tribute Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta property="og:title" content="Hubble Tribute Page" />
+  <meta property="og:description" content="A responsive Tribute Page made for freecodecamp.org" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="main_thumb.png" />
+  <meta property="og:url" content="https://s4muele.github.io/Tribute-Page/" /><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
 <div id="main">
 
@@ -65,7 +68,7 @@
     <p>Special thanks to <a class="thanks" target="_blank" href="https://www.freecodecamp.org/">freecodecamp.org</a></p>
     </div>
 </div> <!--End of #main-->
-<!-- partial -->
+
   <script  src="./script.js"></script>
 
 </body>
